WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224980
REGRESSION (
r271861
): [iOS] Accessory bar navigation to elements outside the viewport fails
https://bugs.webkit.org/show_bug.cgi?id=224980
Summary
REGRESSION (r271861): [iOS] Accessory bar navigation to elements outside the ...
Aditya Keerthi
Reported
2021-04-23 08:59:48 PDT
...
Attachments
Patch
(3.69 KB, patch)
2021-04-23 09:09 PDT
,
Aditya Keerthi
wenson_hsieh
: review+
Details
Formatted Diff
Diff
Patch for landing
(3.69 KB, patch)
2021-04-26 09:07 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2021-04-23 09:00:11 PDT
<
rdar://problem/77042311
>
Aditya Keerthi
Comment 2
2021-04-23 09:09:13 PDT
Created
attachment 426913
[details]
Patch
Wenson Hsieh
Comment 3
2021-04-26 08:58:49 PDT
Comment on
attachment 426913
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=426913&action=review
> Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:2569 > + constexpr OptionSet<HitTestRequest::RequestType> hitType { HitTestRequest::ReadOnly, HitTestRequest::Active, HitTestRequest::AllowChildFrameContent, HitTestRequest::DisallowUserAgentShadowContent, HitTestRequest::IgnoreClipping };
Nit - it looks like this adds an extra leading space before `HitTestRequest::AllowChildFrameContent`.
Aditya Keerthi
Comment 4
2021-04-26 09:07:55 PDT
Created
attachment 427054
[details]
Patch for landing
EWS
Comment 5
2021-04-26 10:35:23 PDT
Committed
r276598
(
237033@main
): <
https://commits.webkit.org/237033@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427054
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug