REGRESSION (r271861): [iOS] Accessory bar navigation to elements outside the viewport fails https://bugs.webkit.org/show_bug.cgi?id=224980 <rdar://problem/77042311>

Reviewed by Wenson Hsieh.

Source/WebKit:

r271861 introduced logic to prevent obscured elements from being
focusable using the accessory bar, using hit testing. However, it also
prevented elements outside the viewport from participating in accessory
bar navigation.

To fix, include HitTestRequest::IgnoreClipping in the hit test request
options. This ensures that hit test requests are not clipped to the
viewport.

Note that this behavior is covered by an existing test, but the test
only failed on smaller devices.

* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::isObscuredElement):

LayoutTests:

* fast/forms/ios/accessory-bar-navigation.html:

Increase the space between input elements, so that the second input is
positioned out of the viewport on larger devices.


Canonical link: https://commits.webkit.org/237033@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276598 268f45cc-cd09-0410-ab3c-d52691b4dbfc